--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     container_name: tapko_bot_db
     image: postgres:17.4-bookworm
     volumes:
-      - ./data/postgres:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
     environment:
       - POSTGRES_USER=tapok
       - POSTGRES_PASSWORD=<DB_PASS>
