--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -1,4 +1,5 @@
 FROM debian:bookworm
+ADD ../src /tapko_bot
 ADD install_prereq.sh /install_prereq.sh
 RUN sh /install_prereq.sh
 ENV LANG en_US.UTF-8
